new_tests/semantics/scope/bad/026_FIELDACCESS_1.cm
/*
    Scope Error 329

    1| cout << a.z
    Field 'z' can not be accessed since it was not declared in class 'A'.
*/

class A { public x:Int }

def a:A = new A()
cout << a.z 
